add biogeme parameters display

--- a/examples/mixed_logit_predict_example.ipynb
+++ b/examples/mixed_logit_predict_example.ipynb
@@ -16,6 +16,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "541406c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "31b2ad5e",
    "metadata": {},
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -155,10 +166,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:2026-01-06 10:02:02,357:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 93\n",
+      "    Function evaluations: 112\n",
+      "Estimation time= 38.1 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -1.0443131     1.0000000    -1.0443131         0.296    \n",
+      "cl                     -0.2374644     1.0000000    -0.2374644         0.812    \n",
+      "loc                     2.4178297     1.0000000     2.4178297        0.0157 *  \n",
+      "wk                      1.6528008     1.0000000     1.6528008        0.0985 .  \n",
+      "tod                   -10.0625781     1.0000000   -10.0625781       1.7e-23 ***\n",
+      "seas                  -10.1197586     1.0000000   -10.1197586      9.66e-24 ***\n",
+      "sd.pf                  -1.3244037     1.0000000    -1.3244037         0.185    \n",
+      "sd.cl                  -0.6750641     1.0000000    -0.6750641           0.5    \n",
+      "sd.loc                  1.6550092     1.0000000     1.6550092         0.098 .  \n",
+      "sd.wk                   0.8672714     1.0000000     0.8672714         0.386    \n",
+      "sd.tod                  2.2684569     1.0000000     2.2684569        0.0234 *  \n",
+      "sd.seas                 1.1734570     1.0000000     1.1734570         0.241    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3163.977\n",
+      "AIC= 6351.954\n",
+      "BIC= 6425.694\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_jax.fit(\n",
     "    X=X_train,\n",
@@ -183,10 +242,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 69\n",
+      "    Function evaluations: 79\n",
+      "Estimation time= 19.1 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -1.0377335     1.0000000    -1.0377335         0.299    \n",
+      "cl                     -0.2314231     1.0000000    -0.2314231         0.817    \n",
+      "loc                     2.3429248     1.0000000     2.3429248        0.0192 *  \n",
+      "wk                      1.6208623     1.0000000     1.6208623         0.105    \n",
+      "tod                    -9.8530732     1.0000000    -9.8530732      1.32e-22 ***\n",
+      "seas                  -10.0301808     1.0000000   -10.0301808      2.34e-23 ***\n",
+      "sd.pf                  -0.2378622     1.0000000    -0.2378622         0.812    \n",
+      "sd.cl                   0.3933036     1.0000000     0.3933036         0.694    \n",
+      "sd.loc                  1.7536430     1.0000000     1.7536430        0.0796 .  \n",
+      "sd.wk                   1.1933456     1.0000000     1.1933456         0.233    \n",
+      "sd.tod                  2.3380823     1.0000000     2.3380823        0.0194 *  \n",
+      "sd.seas                 1.3914941     1.0000000     1.3914941         0.164    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3170.064\n",
+      "AIC= 6364.128\n",
+      "BIC= 6437.867\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -215,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -233,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -251,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "13b94508",
    "metadata": {},
    "outputs": [],
@@ -281,6 +382,7 @@
     "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
     "import biogeme.database as db\n",
     "from biogeme.expressions import Variable\n",
+    "from biogeme.results_processing import get_pandas_estimated_parameters\n",
     "import numpy as np\n",
     "import sklearn\n",
     "\n",
@@ -290,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c56cca0f",
    "metadata": {},
    "outputs": [],
@@ -310,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -358,10 +460,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The number of draws (600) is low. The results may not be meaningful. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results for model model_b\n",
+      "Nbr of parameters:\t\t12\n",
+      "Sample size:\t\t\t361\n",
+      "Observations:\t\t\t3446\n",
+      "Excluded data:\t\t\t0\n",
+      "Final log likelihood:\t\t-3173.087\n",
+      "Akaike Information Criterion:\t6370.174\n",
+      "Bayesian Information Criterion:\t6416.84\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -376,7 +501,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "9ed34733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Robust std err.</th>\n",
+       "      <th>Robust t-stat.</th>\n",
+       "      <th>Robust p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pf_mean</td>\n",
+       "      <td>-1.053524</td>\n",
+       "      <td>0.057997</td>\n",
+       "      <td>-18.165187</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pf_sd</td>\n",
+       "      <td>0.236364</td>\n",
+       "      <td>0.023810</td>\n",
+       "      <td>9.927219</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cl_mean</td>\n",
+       "      <td>-0.252155</td>\n",
+       "      <td>0.028801</td>\n",
+       "      <td>-8.754944</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cl_sd</td>\n",
+       "      <td>0.394744</td>\n",
+       "      <td>0.028258</td>\n",
+       "      <td>13.969337</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>loc_mean</td>\n",
+       "      <td>2.395974</td>\n",
+       "      <td>0.150277</td>\n",
+       "      <td>15.943684</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>loc_sd</td>\n",
+       "      <td>1.841314</td>\n",
+       "      <td>0.166024</td>\n",
+       "      <td>11.090650</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>wk_mean</td>\n",
+       "      <td>1.584268</td>\n",
+       "      <td>0.107127</td>\n",
+       "      <td>14.788694</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>wk_sd</td>\n",
+       "      <td>1.175335</td>\n",
+       "      <td>0.119438</td>\n",
+       "      <td>9.840517</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>tod_mean</td>\n",
+       "      <td>-9.816967</td>\n",
+       "      <td>0.496163</td>\n",
+       "      <td>-19.785784</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>tod_sd</td>\n",
+       "      <td>2.278416</td>\n",
+       "      <td>0.233819</td>\n",
+       "      <td>9.744351</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>seas_mean</td>\n",
+       "      <td>-10.141302</td>\n",
+       "      <td>0.511085</td>\n",
+       "      <td>-19.842679</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>seas_sd</td>\n",
+       "      <td>1.460662</td>\n",
+       "      <td>0.295879</td>\n",
+       "      <td>4.936686</td>\n",
+       "      <td>7.946121e-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name      Value  Robust std err.  Robust t-stat.  Robust p-value\n",
+       "0     pf_mean  -1.053524         0.057997      -18.165187    0.000000e+00\n",
+       "1       pf_sd   0.236364         0.023810        9.927219    0.000000e+00\n",
+       "2     cl_mean  -0.252155         0.028801       -8.754944    0.000000e+00\n",
+       "3       cl_sd   0.394744         0.028258       13.969337    0.000000e+00\n",
+       "4    loc_mean   2.395974         0.150277       15.943684    0.000000e+00\n",
+       "5      loc_sd   1.841314         0.166024       11.090650    0.000000e+00\n",
+       "6     wk_mean   1.584268         0.107127       14.788694    0.000000e+00\n",
+       "7       wk_sd   1.175335         0.119438        9.840517    0.000000e+00\n",
+       "8    tod_mean  -9.816967         0.496163      -19.785784    0.000000e+00\n",
+       "9      tod_sd   2.278416         0.233819        9.744351    0.000000e+00\n",
+       "10  seas_mean -10.141302         0.511085      -19.842679    0.000000e+00\n",
+       "11    seas_sd   1.460662         0.295879        4.936686    7.946121e-07"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pandas_parameters = get_pandas_estimated_parameters(estimation_results=results)\n",
+    "display(pandas_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -415,10 +700,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "82021295",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6419672245619579\n"
+     ]
+    }
+   ],
    "source": [
     "# Jaxlogit\n",
     "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
@@ -427,10 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a8c30e08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6414062150558543\n"
+     ]
+    }
+   ],
    "source": [
     "# xlogit\n",
     "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
@@ -439,10 +740,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4f1b12c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6425035924695395\n"
+     ]
+    }
+   ],
    "source": [
     "# Biogeme\n",
     "y = df_wide_test['choice']\n",
