--- a/examples/mixed_logit_predict_example.ipynb
+++ b/examples/mixed_logit_predict_example.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -155,10 +155,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 84\n",
+      "    Function evaluations: 100\n",
+      "Estimation time= 32.6 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9876099     1.0000000    -0.9876099         0.323    \n",
+      "cl                     -0.2254359     1.0000000    -0.2254359         0.822    \n",
+      "loc                     2.2976453     1.0000000     2.2976453        0.0216 *  \n",
+      "wk                      1.5896322     1.0000000     1.5896322         0.112    \n",
+      "tod                    -9.6253674     1.0000000    -9.6253674      1.17e-21 ***\n",
+      "seas                   -9.6283633     1.0000000    -9.6283633      1.13e-21 ***\n",
+      "sd.pf                  -1.4346222     1.0000000    -1.4346222         0.151    \n",
+      "sd.cl                  -0.7809900     1.0000000    -0.7809900         0.435    \n",
+      "sd.loc                  1.7008893     1.0000000     1.7008893        0.0891 .  \n",
+      "sd.wk                   0.7694296     1.0000000     0.7694296         0.442    \n",
+      "sd.tod                  2.3696764     1.0000000     2.3696764        0.0179 *  \n",
+      "sd.seas                 1.2500836     1.0000000     1.2500836         0.211    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3181.502\n",
+      "AIC= 6387.004\n",
+      "BIC= 6460.744\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_jax.fit(\n",
     "    X=X_train,\n",
@@ -183,10 +224,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 62\n",
+      "    Function evaluations: 71\n",
+      "Estimation time= 18.6 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9840832     1.0000000    -0.9840832         0.325    \n",
+      "cl                     -0.2279975     1.0000000    -0.2279975          0.82    \n",
+      "loc                     2.3256763     1.0000000     2.3256763        0.0201 *  \n",
+      "wk                      1.5943038     1.0000000     1.5943038         0.111    \n",
+      "tod                    -9.5490129     1.0000000    -9.5490129       2.4e-21 ***\n",
+      "seas                   -9.6210898     1.0000000    -9.6210898      1.22e-21 ***\n",
+      "sd.pf                  -0.2091180     1.0000000    -0.2091180         0.834    \n",
+      "sd.cl                   0.3692147     1.0000000     0.3692147         0.712    \n",
+      "sd.loc                  1.8243604     1.0000000     1.8243604        0.0682 .  \n",
+      "sd.wk                   1.1310799     1.0000000     1.1310799         0.258    \n",
+      "sd.tod                  2.5753925     1.0000000     2.5753925        0.0101 *  \n",
+      "sd.seas                 1.5803861     1.0000000     1.5803861         0.114    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3180.694\n",
+      "AIC= 6385.387\n",
+      "BIC= 6459.127\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -218,7 +301,19 @@
    "execution_count": null,
    "id": "40aadb5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'deepcopy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[117]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mdeepcopy\u001b[49m(model_jax) \n\u001b[32m      2\u001b[39m config = ConfigData(\n\u001b[32m      3\u001b[39m     panels=panels_test,\n\u001b[32m      4\u001b[39m     n_draws=n_draws,\n\u001b[32m   (...)\u001b[39m\u001b[32m      7\u001b[39m     optim_method=\u001b[33m\"\u001b[39m\u001b[33mL-BFGS-B\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      8\u001b[39m )\n\u001b[32m      9\u001b[39m config.init_coeff = init_coeff_j\n",
+      "\u001b[31mNameError\u001b[39m: name 'deepcopy' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = model_jax \n",
     "config = ConfigData(\n",
@@ -270,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "13b94508",
    "metadata": {},
    "outputs": [],
@@ -290,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "c56cca0f",
    "metadata": {},
    "outputs": [],
@@ -310,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -358,10 +453,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The number of draws (600) is low. The results may not be meaningful. \n",
+      "The number of draws (600) is low. The results may not be meaningful. \n",
+      "The number of draws (600) is low. The results may not be meaningful. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results for model model_b\n",
+      "Nbr of parameters:\t\t12\n",
+      "Sample size:\t\t\t361\n",
+      "Observations:\t\t\t3446\n",
+      "Excluded data:\t\t\t0\n",
+      "Final log likelihood:\t\t-3217.741\n",
+      "Akaike Information Criterion:\t6459.482\n",
+      "Bayesian Information Criterion:\t6506.149\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -376,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -407,6 +527,77 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9329e811",
+   "metadata": {},
+   "source": [
+    "Compare coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "8a504c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['pf_mean', 'pf_sd', 'cl_mean', 'cl_sd', 'loc_mean', 'loc_sd', 'wk_mean', 'wk_sd', 'tod_mean', 'tod_sd', 'seas_mean', 'seas_sd'])\n",
+      "['pf' 'cl' 'loc' 'wk' 'tod' 'seas' 'sd.pf' 'sd.cl' 'sd.loc' 'sd.wk'\n",
+      " 'sd.tod' 'sd.seas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.get_beta_values().keys())\n",
+    "print(model_jax.coeff_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "27b203bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Estimate      Jaxlogit        xlogit       Biogeme\n",
+      "--------------------------------------------------------\n",
+      "pf               -1.0067627    -1.0110497    -0.9820496\n",
+      "cl               -0.2320074    -0.2272688    -0.2314236\n",
+      "loc               2.2454414     2.2668891     2.2612401\n",
+      "wk                1.6752485     1.6807268     1.5909022\n",
+      "tod              -9.6596921    -9.6469617    -9.2714993\n",
+      "seas             -9.8234901    -9.8809136    -9.6652957\n",
+      "sd.pf            -1.3877084    -0.2261751     0.2288702\n",
+      "sd.cl            -0.6818270     0.4151835     0.3988945\n",
+      "sd.loc            1.5973204     1.7943527     1.6836334\n",
+      "sd.wk             0.7381698     1.1102512     1.0795784\n",
+      "sd.tod            2.0950597     2.3738184     2.0234659\n",
+      "sd.seas           1.2466002     1.5305747     1.5637653\n",
+      "--------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
+    "print(\"-\" * 56)\n",
+    "fmt = \"{:13} {:13.7f} {:13.7f} {:13.7f}\"\n",
+    "coeff_names = {'pf': 'pf_mean', 'sd.pf': 'pf_sd', 'cl': 'cl_mean', 'sd.cl': 'cl_sd', 'loc': 'loc_mean', 'sd.loc': 'loc_sd', 'wk': 'wk_mean', 'sd.wk': 'wk_sd', 'tod': 'tod_mean', 'sd.tod': 'tod_sd', 'seas': 'seas_mean', 'sd.seas': 'seas_sd'}\n",
+    "for i in range(len(model_jax.coeff_)):\n",
+    "    name = model_jax.coeff_names[i]\n",
+    "    print(fmt.format(name[:13], \n",
+    "                     model_jax.coeff_[i], \n",
+    "                     model_x.coeff_[i], \n",
+    "                     results.get_beta_values()[coeff_names[name]]))\n",
+    "print(\"-\" * 56)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd8ed0ef",
    "metadata": {},
    "source": [
@@ -415,10 +606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "82021295",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.625050371323328\n"
+     ]
+    }
+   ],
    "source": [
     "# Jaxlogit\n",
     "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
@@ -427,10 +626,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a8c30e08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6254590395576656\n"
+     ]
+    }
+   ],
    "source": [
     "# xlogit\n",
     "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
@@ -439,10 +646,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4f1b12c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6258855285619304\n"
+     ]
+    }
+   ],
    "source": [
     "# Biogeme\n",
     "y = df_wide_test['choice']\n",
