Evelyn/test docstrings (#57)

--- a/examples/mixed_logit_predict_example.ipynb
+++ b/examples/mixed_logit_predict_example.ipynb
@@ -281,6 +281,7 @@
     "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
     "import biogeme.database as db\n",
     "from biogeme.expressions import Variable\n",
+    "from biogeme.results_processing import get_pandas_estimated_parameters\n",
     "import numpy as np\n",
     "import sklearn\n",
     "\n",
@@ -372,6 +373,17 @@
     "the_biogeme.model_name = 'model_b'\n",
     "results = the_biogeme.estimate()\n",
     "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ed34733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_parameters = get_pandas_estimated_parameters(estimation_results=results)\n",
+    "display(pandas_parameters)"
    ]
   },
   {
