--- a/examples/mixed_logit_predict_example.ipynb
+++ b/examples/mixed_logit_predict_example.ipynb
@@ -40,6 +40,16 @@
     "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
     "from jaxlogit.utils import wide_to_long\n",
     "\n",
+    "import biogeme.biogeme_logging as blog\n",
+    "import biogeme.biogeme as bio\n",
+    "from biogeme import models\n",
+    "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
+    "import biogeme.database as db\n",
+    "from biogeme.expressions import Variable\n",
+    "\n",
+    "logger = blog.get_screen_logger()\n",
+    "logger.setLevel(blog.INFO)\n",
+    "\n",
     "#  64bit precision\n",
     "jax.config.update(\"jax_enable_x64\", True)"
    ]
@@ -98,7 +108,19 @@
     "df_train = wide_to_long(df_wide_train, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
     "df_train = df_train.sort_values(['chid', 'alt'])\n",
     "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
-    "df_test = df_test.sort_values(['chid', 'alt'])"
+    "df_test = df_test.sort_values(['chid', 'alt'])\n",
+    "\n",
+    "database_train = db.Database('electricity', df_wide_train)\n",
+    "database_train.panel('id')\n",
+    "database_test = db.Database('electricity', df_wide_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "248ed5fe",
+   "metadata": {},
+   "source": [
+    "jaxlogit and xlogit setup:"
    ]
   },
   {
@@ -147,172 +169,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a8c388",
+   "id": "d4dd8b9a",
    "metadata": {},
    "source": [
-    "Make the model in jaxlogit"
+    "Biogeme setup:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52742f8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_jax.fit(\n",
-    "    X=X_train,\n",
-    "    y=y_train,\n",
-    "    varnames=varnames,\n",
-    "    ids=ids_train,\n",
-    "    alts=alts_train,\n",
-    "    randvars=randvars,\n",
-    "    config=config\n",
-    ")\n",
-    "display(model_jax.summary())\n",
-    "init_coeff_j = model_jax.coeff_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc53d9f8",
-   "metadata": {},
-   "source": [
-    "Make the model in xlogit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e89a636c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_x.fit(\n",
-    "    X=X_train,\n",
-    "    y=y_train,\n",
-    "    varnames=varnames,\n",
-    "    ids=ids_train,\n",
-    "    alts=alts_train,\n",
-    "    randvars=randvars,\n",
-    "    panels=panels_train,\n",
-    "    n_draws=n_draws,\n",
-    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-    "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B\",\n",
-    ")\n",
-    "display(model_x.summary())\n",
-    "init_coeff_x = model_x.coeff_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d7bcacd",
-   "metadata": {},
-   "source": [
-    "Predict from the model using jaxlogit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40aadb5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = model_jax \n",
-    "config = ConfigData(\n",
-    "    panels=panels_test,\n",
-    "    n_draws=n_draws,\n",
-    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-    "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B\",\n",
-    ")\n",
-    "config.init_coeff = init_coeff_j"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33951641",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob_jj = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "64941385",
-   "metadata": {},
-   "source": [
-    "Predict from the model using xlogit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32e13c4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = model_x\n",
-    "_, prob_xx = model.predict(X_test, varnames, alts_test, ids_test, isvars=None, panels=panels_test, n_draws=n_draws, return_proba=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80047997",
-   "metadata": {},
-   "source": [
-    "# Biogeme"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13b94508",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import biogeme.biogeme_logging as blog\n",
-    "import biogeme.biogeme as bio\n",
-    "from biogeme import models\n",
-    "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
-    "import biogeme.database as db\n",
-    "from biogeme.expressions import Variable\n",
-    "from biogeme.results_processing import get_pandas_estimated_parameters\n",
-    "import numpy as np\n",
-    "import sklearn\n",
-    "\n",
-    "logger = blog.get_screen_logger()\n",
-    "logger.setLevel(blog.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c56cca0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "database_train = db.Database('electricity', df_wide_train)\n",
-    "database_train.panel('id')\n",
-    "database_test = db.Database('electricity', df_wide_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9e2aa7f",
-   "metadata": {},
-   "source": [
-    "Create variables and expression for utility of each alternative (V)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6d45e23",
+   "id": "b58c4d3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,9 +224,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80a8c388",
+   "metadata": {},
+   "source": [
+    "# Make the models\n",
+    "Jaxlogit:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5155f664",
+   "id": "52742f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_jax.fit(\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    varnames=varnames,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
+    "    randvars=randvars,\n",
+    "    config=config\n",
+    ")\n",
+    "display(model_jax.summary())\n",
+    "init_coeff_j = model_jax.coeff_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc53d9f8",
+   "metadata": {},
+   "source": [
+    "xlogit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89a636c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_x.fit(\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    varnames=varnames,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
+    "    randvars=randvars,\n",
+    "    panels=panels_train,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS-B\",\n",
+    ")\n",
+    "display(model_x.summary())\n",
+    "init_coeff_x = model_x.coeff_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a2add0a",
+   "metadata": {},
+   "source": [
+    "Biogeme:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0fe20c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,14 +311,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5486e8e2",
+   "metadata": {},
+   "source": [
+    "# Compare parameters:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed34733",
+   "id": "ca1a3992",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas_parameters = get_pandas_estimated_parameters(estimation_results=results)\n",
-    "display(pandas_parameters)"
+    "print(\"{:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
+    "print(\"-\" * 58)\n",
+    "fmt = \"{:13} {:13.7f} {:13.7f} {:13.7f}\"\n",
+    "coeff_names = {'pf': 'pf_mean', 'sd.pf': 'pf_sd', 'cl': 'cl_mean', 'sd.cl': 'cl_sd', 'loc': 'loc_mean', 'sd.loc': 'loc_sd', 'wk': 'wk_mean', 'sd.wk': 'wk_sd', 'tod': 'tod_mean', 'sd.tod': 'tod_sd', 'seas': 'seas_mean', 'sd.seas': 'seas_sd'}\n",
+    "for i in range(len(model_jax.coeff_)):\n",
+    "    name = model_jax.coeff_names[i]\n",
+    "    print(fmt.format(name[:13], \n",
+    "                     model_jax.coeff_[i], \n",
+    "                     model_x.coeff_[i], \n",
+    "                     results.get_beta_values()[coeff_names[name]]))\n",
+    "print(\"-\" * 58)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d7bcacd",
+   "metadata": {},
+   "source": [
+    "# Predict\n",
+    "jaxlogit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40aadb5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model_jax \n",
+    "config = ConfigData(\n",
+    "    panels=panels_test,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS-B\",\n",
+    ")\n",
+    "config.init_coeff = init_coeff_j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33951641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob_jj = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64941385",
+   "metadata": {},
+   "source": [
+    "xlogit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e13c4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, prob_xx = model_x.predict(X_test, varnames, alts_test, ids_test, isvars=None, panels=panels_test, n_draws=n_draws, return_proba=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12ed7228",
+   "metadata": {},
+   "source": [
+    "Biogeme:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56cca0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database_train = db.Database('electricity', df_wide_train)\n",
+    "database_train.panel('id')\n",
+    "database_test = db.Database('electricity', df_wide_test)"
    ]
   },
   {
@@ -411,15 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831c32d5",
-   "metadata": {},
-   "source": [
-    "# Test the results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fd8ed0ef",
+   "id": "9d20a479",
    "metadata": {},
    "source": [
     "Compute the brier score:"
@@ -428,37 +447,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82021295",
+   "id": "49d1f064",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Jaxlogit\n",
-    "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_jj))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8c30e08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xlogit\n",
-    "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
-    "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f1b12c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Biogeme\n",
-    "y = df_wide_test['choice']\n",
-    "print(sklearn.metrics.brier_score_loss(y, probs))"
+    "print(\"{:>9} {:>9} {:>9}\".format(\"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
+    "print(\"-\" * 31)\n",
+    "fmt = \"{:9f} {:9f} {:9f}\"\n",
+    "print(fmt.format(sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_jj.shape[0], -1)), prob_jj),\n",
+    "                 sklearn.metrics.brier_score_loss(np.reshape(y_test, (prob_xx.shape[0], -1)), prob_xx),\n",
+    "                 sklearn.metrics.brier_score_loss(df_wide_test['choice'], probs)))\n",
+    "print(\"-\" * 31)"
    ]
   }
  ],
