add biogeme memory tracking code

--- a/docs/graphs/comparison_graphs_memory.ipynb
+++ b/docs/graphs/comparison_graphs_memory.ipynb
@@ -312,7 +312,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "ccf7ab9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def biogeme_running(V, choice):\n",
+    "    prob = models.logit(V, None, choice)\n",
+    "    logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
+    "\n",
+    "    the_biogeme = bio.BIOGEME(\n",
+    "        database_panel, logprob, number_of_draws=600, seed=999, generate_yaml=False, generate_html=False\n",
+    "    )\n",
+    "    the_biogeme.model_name = 'model_b'\n",
+    "    results = the_biogeme.estimate()\n",
+    "\n",
+    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=5.0, multiprocess=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0080efc3",
    "metadata": {},
    "outputs": [
@@ -330,9 +350,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(mem_usage_j, label=\"Memory usage by jaxlogit (MB)\")\n",
-    "plt.plot(mem_usage_x, label=\"Memory usage by xlogit (MB)\")\n",
-    "plt.plot(mem_usage_medium_batch, label=\"Memory usage by jaxlogit using batches (MB)\")\n",
+    "plt.plot(mem_usage_j, label=\"Memory usage by jaxlogit\")\n",
+    "plt.plot(mem_usage_x, label=\"Memory usage by xlogit\")\n",
+    "plt.plot(mem_usage_medium_batch, label=\"Memory usage by jaxlogit using batches\")\n",
+    "plt.plot(mem_usage_biogeme, label=\"Memory usage by biogeme\")\n",
     "plt.xlim(left=0)\n",
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
