--- a/docs/graphs/comparison_graphs_memory.ipynb
+++ b/docs/graphs/comparison_graphs_memory.ipynb
@@ -103,8 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
-    "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
+    "df_long = pd.read_csv(pathlib.Path.cwd().parent.parent / \"electricity_long.csv\")\n",
     "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
     "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
     "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
