--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(pathlib.Path.cwd().parent.parent / \"examples\" / \"electricity_long.csv\")\n",
+    "df = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\")\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
     "n_draws = 600\n",
     "quick_draws_biogeme = [100, 200, 400, 500, 600]\n",
