--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -70,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\")\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
     "n_draws = 600\n",
     "quick_draws_biogeme = [100, 200, 300, 400, 500, 600]\n",
@@ -151,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
+    "df = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\") # get a clean version\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
     "n_draws = 5000\n",
     "\n",
