add memory and timing graphs

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -172,7 +172,26 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING:2026-01-16 16:09:08,000:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+            "Unknown optimization method1: L-BFGS-B exiting gracefully\n",
+            "Optimization failed, returning None.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "None"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "model = MixedLogit()\n",
         "\n",
@@ -181,7 +200,7 @@
         "    n_draws=n_draws,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=1077,  # should result in 4 batches\n",
-        "    optim_method=\"L-BFGS-B\",  # \"L-BFGS-B\", \"BFGS\"lver\n",
+        "    optim_method=\"L-BFGS\",  # \"L-BFGS-B\", \"BFGS\"lver\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
