clear for diffs

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -23,20 +23,16 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
-        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
-        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -55,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -64,21 +60,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Data has 4308 observations, we use 6 random variables in the model. We work in 64 bit precision, so each element is 8 bytes. For 5000 draws, the array of draws is about 0.96 GB.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "n_obs = df['chid'].unique().shape[0]\n",
         "n_vars = 6\n",
-        "n_draws = 5000\n",
+        "n_draws = 1000\n",
         "\n",
         "size_in_ram = (n_obs * n_vars * n_draws * 8) / (1024 ** 3)  # in GB\n",
         "\n",
@@ -94,56 +82,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "**** The optimization did not converge after 44 iterations. ****\n",
-            "Convergence not reached. The estimates may not be reliable.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: max line search iters reached\n",
-            "    Iterations: 44\n",
-            "    Function evaluations: 58\n",
-            "Estimation time= 13.9 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -0.9150173     1.0000000    -0.9150173          0.36    \n",
-            "cl                     -0.2352363     1.0000000    -0.2352363         0.814    \n",
-            "loc                     2.2576092     1.0000000     2.2576092         0.024 *  \n",
-            "wk                      1.6694212     1.0000000     1.6694212        0.0951 .  \n",
-            "tod                    -8.7990986     1.0000000    -8.7990986      1.96e-18 ***\n",
-            "seas                   -9.2165341     1.0000000    -9.2165341      4.68e-20 ***\n",
-            "sd.pf                  -3.2531691     1.0000000    -3.2531691       0.00115 ** \n",
-            "sd.cl                  -0.6681733     1.0000000    -0.6681733         0.504    \n",
-            "sd.loc                  1.6725345     1.0000000     1.6725345        0.0945 .  \n",
-            "sd.wk                   0.8063075     1.0000000     0.8063075          0.42    \n",
-            "sd.tod                  2.7147022     1.0000000     2.7147022       0.00666 ** \n",
-            "sd.seas                 2.3838406     1.0000000     2.3838406        0.0172 *  \n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3909.383\n",
-            "AIC= 7842.766\n",
-            "BIC= 7919.185\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = MixedLogit()\n",
         "\n",
@@ -152,7 +91,7 @@
         "    n_draws=1000,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
-        "    optim_method=\"L-BFGS\",\n",
+        "    optim_method=\"L-BFGS-optax\",\n",
         "    maxiter=100,\n",
         ")\n",
         "\n",
@@ -172,26 +111,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:2026-01-16 16:09:08,000:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-            "Unknown optimization method1: L-BFGS-B exiting gracefully\n",
-            "Optimization failed, returning None.\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = MixedLogit()\n",
         "\n",
