try catch for biogeme import

--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -33,12 +33,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/arviz/__init__.py:39: FutureWarning: \n",
-      "ArviZ is undergoing a major refactor to improve flexibility and extensibility while maintaining a user-friendly interface.\n",
-      "Some upcoming changes may be backward incompatible.\n",
-      "For details and migration guidance, visit: https://python.arviz.org/en/latest/user_guide/migration_guide.html\n",
-      "  warn(\n",
-      "WARNING:2026-01-22 11:34:51,795:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+      "WARNING:2026-01-22 14:37:27,084:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
       "/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/tqdm_joblib/__init__.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
@@ -61,8 +56,7 @@
     "import biogeme.biogeme_logging as blog\n",
     "import biogeme.biogeme as bio\n",
     "from biogeme import models\n",
-    "from biogeme.expressions import Beta, log, MonteCarlo, PanelLikelihoodTrajectory\n",
-    "from biogeme.expressions.draws import Draws\n",
+    "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
     "import biogeme.database as db\n",
     "from biogeme.expressions import Variable\n",
     "\n",
@@ -198,10 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b58c4d3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_274727/3672586993.py:27: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  pf_rnd = pf_mean + pf_sd * bioDraws('pf_rnd', 'NORMAL')\n",
+      "/tmp/ipykernel_274727/3672586993.py:28: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  cl_rnd = cl_mean + cl_sd * bioDraws('cl_rnd', 'NORMAL')\n",
+      "/tmp/ipykernel_274727/3672586993.py:29: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  loc_rnd = loc_mean + loc_sd * bioDraws('loc_rnd', 'NORMAL')\n",
+      "/tmp/ipykernel_274727/3672586993.py:30: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  wk_rnd = wk_mean + wk_sd * bioDraws('wk_rnd', 'NORMAL')\n",
+      "/tmp/ipykernel_274727/3672586993.py:31: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  tod_rnd = tod_mean + tod_sd * bioDraws('tod_rnd', 'NORMAL')\n",
+      "/tmp/ipykernel_274727/3672586993.py:32: DeprecationWarning: 'bioDraws' is deprecated and will be removed in a future version. Use 'Draws' instead.\n",
+      "  seas_rnd = seas_mean + seas_sd * bioDraws('seas_rnd', 'NORMAL')\n"
+     ]
+    }
+   ],
    "source": [
     "X = {\n",
     "    name: {\n",
