change comparison example

--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -11,8 +11,8 @@
     "| | jaxlogit-scipy | jaxlogit-jax | xlogit | biogeme |\n",
     "|---|---|---|---|---|\n",
     "|Making Model | 33.1s | 22.2s | 18.5s | 4:30 |\n",
-    "|Estimating | 1.6s | | 0.0s | 15.4s |\n",
-    "|Brier Score | 0.6345 | | 0.6345 | 0.6345 |"
+    "|Estimating | 1.6s | 0.2s | 0.0s | 14.3s |\n",
+    "|Brier Score | 0.624247 | 0.624247 | 0.624570 | 0.624163 |"
    ]
   },
   {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -660,10 +660,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "49d1f064",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaxlogit-scipy Jaxlogit-jax    xlogit   Biogeme\n",
+      "-------------------------------\n",
+      " 0.624247  0.624248  0.624570  0.624163\n",
+      "-------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"{:>9} {:>9} {:>9} {:>9}\".format(\"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"xlogit\", \"Biogeme\"))\n",
     "print(\"-\" * 31)\n",
