--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -171,15 +171,64 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING:2026-01-23 10:24:42,201:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Optimization terminated successfully.\n",
+            "    Message: unknown\n",
+            "    Iterations: 70\n",
+            "    Function evaluations: 78\n",
+            "Estimation time= 61.2 seconds\n",
+            "---------------------------------------------------------------------------\n",
+            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+            "---------------------------------------------------------------------------\n",
+            "pf                     -1.0206555     1.0000000    -1.0206555         0.307    \n",
+            "cl                     -0.2446836     1.0000000    -0.2446836         0.807    \n",
+            "loc                     2.3320637     1.0000000     2.3320637        0.0197 *  \n",
+            "wk                      1.6238631     1.0000000     1.6238631         0.104    \n",
+            "tod                    -9.7212850     1.0000000    -9.7212850      4.12e-22 ***\n",
+            "seas                   -9.6267158     1.0000000    -9.6267158      1.02e-21 ***\n",
+            "sd.pf                  -1.2174305     1.0000000    -1.2174305         0.224    \n",
+            "sd.cl                  -0.7125495     1.0000000    -0.7125495         0.476    \n",
+            "sd.loc                  1.7113082     1.0000000     1.7113082        0.0871 .  \n",
+            "sd.wk                   0.8960280     1.0000000     0.8960280          0.37    \n",
+            "sd.tod                  2.4364222     1.0000000     2.4364222        0.0149 *  \n",
+            "sd.seas               -28.5934756     1.0000000   -28.5934756     8.41e-165 ***\n",
+            "---------------------------------------------------------------------------\n",
+            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+            "\n",
+            "Log-Likelihood= -3904.059\n",
+            "AIC= 7832.118\n",
+            "BIC= 7908.536\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "None"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "model = MixedLogit()\n",
         "\n",
         "config = ConfigData(\n",
         "    panels=df['id'],\n",
         "    n_draws=n_draws,\n",
-        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    batch_size=1077,  # should result in 4 batches\n",
+        "    # skip_std_errs=True,  # skip standard errors to speed up the example\n",
+        "    batch_size=539,  # should result in 4 batches\n",
         "    optim_method=\"BFGS-scipy\",\n",
         ")\n",
         "\n",
